--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deadpool Battle Simulator</title>
-    <link type="stylesheet" href="assets/css/style.css">
-    <link type="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <script src="http://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </head>
 <body>
     
-    <div class="main-section-title">Deadpool Battle Simulator!</div>
+    <div class="top-teader">Deadpool Battle Simulator!</div>
     <div id="main-game-section">
 
         <div id="character-section">
